vlib/v/parser/tests/array_decl_type_err.out
vlib/v/parser/tests/array_decl_type_err.vv:1:12: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    1 | mut a := []array{}
      |            ~~~~~
    2 | a.insert(4, '1')
