vlib/v/parser/tests/array_decl_type_err.vv
mut a := []array{}
a.insert(4, '1')
